Fix misaligned button text in IE/Firefox. Apparently my custom padding settings didn't play nice with the new button styles introduced in WP 3.5.
git-svn-id: https://plugins.svn.wordpress.org/admin-menu-editor/trunk@647848 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/menu-editor.css
+++ b/css/menu-editor.css
@@ -104,7 +104,6 @@ input[type="checkbox"].ws_actor_access_checkbox /* Ensure we override WP default
 	display: block;
 	margin: 4px;
 	width: 120px;
-	padding: 4px;
 }
 
 #ws_menu_editor #ws_save_menu {
